--- a/modlist.html
+++ b/modlist.html
@@ -1,14 +1,15 @@
 ﻿<ul>
 <li><a href="https://minecraft.curseforge.com/mc-mods/285742">Smooth Font (by bre2el)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/224472">AppleCore (by squeek502)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/310812">Just Enough Energistics (JEE) (by TheRealp455w0rd)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/240630">Just Enough Resources (JER) (by way2muchnoise)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/310812">Just Enough Energistics (JEE) (by TheRealp455w0rd)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/238403">Better Builder's Wands (by Portablejim)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/246764">Tree Growing Simulator (by tterrag1098)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/253449">Hwyla (by TehNut)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/311938">InWorldCrafting (by IterationFunk)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/257356">In Control! (by McJty)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/253462">Steve's Carts Reborn (by modmuss50)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/267959">Harvestables (by TechnicianLP)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/69118">Morpheus (by Quetzi)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/250702">Just Enough Characters (by towdium)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/247921">ZeroCore (by ZeroNoRyouki)</a></li>
@@ -17,6 +18,7 @@
 <li><a href="https://minecraft.curseforge.com/mc-mods/244049">Woot (by Ipsis)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/268560">Mekanism (by bradyaidanc)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/270790">Modular Machinery (by HellFirePvP)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/303657">🥝 Kiwi (by Snownee_)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/229587">BNBGamingLib (by bloodnbonesgaming)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/261348">Avaritia 1.1x (by brandon3055)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/280294">FPS Reducer (by bre2el)</a></li>
@@ -24,20 +26,18 @@
 <li><a href="https://minecraft.curseforge.com/mc-mods/258587">ItemPhysic Full (by CreativeMD)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/280316">Item Stages (by DarkhaxDev)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/228525">Bookshelf (by DarkhaxDev)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/240783">SimpleHarvest (by TehNut)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/297057">LetsEncryptCraft (by CloudyPSP)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/268655">Game Stages (by DarkhaxDev)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/250277">Extreme Reactors (by ZeroNoRyouki)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/246939">Water Strainer (by Ruuubi)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/79287">Waila Harvestability (by squeek502)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/250290">Surge (by DarkhaxDev)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/306549">Tips (by DarkhaxDev)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/314904">FTB Backups (by LatvianModder)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/306549">Tips (by DarkhaxDev)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/235261">Just a Few Fish (by Tmtravlr)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/318255">Phosphor (by jellysquid_)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/277047">InstantUnify (by KidsDontPlay)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/235279">Chisel (by tterrag1098)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/220811">The Spice of Life (by squeek502)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/224712">Wawla - What Are We Looking At (by DarkhaxDev)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/267602">ConnectedTexturesMod (by tterrag1098)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/319404">Barrels, Drums, Storage & More (by Funwayguy)</a></li>
@@ -48,6 +48,7 @@
 <li><a href="https://minecraft.curseforge.com/mc-mods/226406">Custom Main Menu (by Lumien231)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/74924">Mantle (by mDiyo)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/223094">Inventory Tweaks (by JimeoWan)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/224218">Compact Machines (by davenonymous)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/250398">Controlling (by Jaredlll08)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/226447">Resource Loader (by Lumien231)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/289412">FTB Quests (by LatvianModder)</a></li>
@@ -58,6 +59,7 @@
 <li><a href="https://minecraft.curseforge.com/mc-mods/290545">More Cauldrons (by Mrbysco)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/288885">FastWorkbench (by Shadows_of_Fire)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/292785">VanillaFix (by Runemoro)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/301140">Trap Expansion (by Lemonszz)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/248787">AppleSkin (by squeek502)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/269398">Dimension Stages (by DarkhaxDev)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/237102">FTB Utilities (by LatvianModder)</a></li>
@@ -68,11 +70,11 @@
 <li><a href="https://minecraft.curseforge.com/mc-mods/283344">TexFix (by Speiger)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/229876">BetterFps (by Guichaguri)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/306770">Patchouli (by Vazkii)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/324598">Hardcore Item Stages (by Tschipp)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/285612">RandomPatches (by TheRandomLabs)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/60028">Aquaculture 2 (by Shadowclaimer)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/299540">FastFurnace (by Shadows_of_Fire)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/223794">Applied Energistics 2 (by AlgorithmX2)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/307346">🔬 Research Table (by Snownee_)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/297878">Topography (by bloodnbonesgaming)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/237167">FTB Library (by LatvianModder)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/228815">OpenModsLib (by OpenMods)</a></li>
